bin_PROGRAMS = cphf
cphf_SOURCES = 	 \
	cphf.cpp \
	CPHFReader.cpp \
	FileStatReader.cpp \
	LSOFReader.cpp \
	PrettyPrinter.cpp \
	ProcFile.cpp \
	ProcFileEntryBuilder.cpp \
	ProcReader.cpp \
	UnlinkedFile.cpp 
include_HEADERS = \
	CPHFCommon.h \
	CPHFFile.h \
	CPHFReader.h \
	FileStatReader.h \
	LSOFReader.h \
	PrettyPrinter.h \
	ProcFile.h \
	ProcFileEntryBuilder.h \
	ProcReader.h \
	UnlinkedFile.h
